update docs queue endpoint
